--- a/client/sass/_table.scss
+++ b/client/sass/_table.scss
@@ -34,6 +34,8 @@
 
 	th {
 		font-size: 1.1em;
+		min-width: 100px;
+		padding: 0 .25em;
 		padding-bottom: 1em;
 		text-transform: capitalize;
 	}
